agregamos los estilos iniciales de nuestro proyecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="nav">
-            <img src="" alt="">
+            <img src="./img/pokeapi.png" alt="PokeApiLogo">
             <ul class="nav-list">
                 <i class="nav-item"><button class="btn btn-header" id="ver-todos">Ver Todos</button></i>
                 <i class="nav-item"><button class="btn btn-header normal" id="normal">Normal</button></i>
